[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/fase 2/Fase fios.gd" type="Script" id=1]

[node name="Fase fios" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Node" parent="."]

[node name="fundo" type="ColorRect" parent="Fundo"]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Fundo"]
margin_left = 45.5
margin_top = 20.0
margin_right = 314.5
margin_bottom = 51.0
text = "Ligue os fios nos valores correspondentes
para não cometar a corrupção"
align = 1
valign = 1

[node name="caixa" type="ColorRect" parent="Fundo"]
margin_left = 20.0
margin_top = 100.0
margin_right = 340.0
margin_bottom = 420.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="corR" type="ColorRect" parent="Fundo"]
margin_left = 20.0
margin_top = 77.0
margin_right = 34.0
margin_bottom = 91.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corR"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 200MB"

[node name="corY" type="ColorRect" parent="Fundo"]
margin_left = 105.0
margin_top = 77.0
margin_right = 119.0
margin_bottom = 91.0
color = Color( 1, 0.984314, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corY"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 400MB"

[node name="corB" type="ColorRect" parent="Fundo"]
margin_left = 189.0
margin_top = 77.0
margin_right = 203.0
margin_bottom = 91.0
color = Color( 0, 0.0862745, 1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corB"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 500MB"

[node name="corW" type="ColorRect" parent="Fundo"]
margin_left = 275.0
margin_top = 77.0
margin_right = 289.0
margin_bottom = 91.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corW"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 1GB"

[node name="Connecteds" type="Node" parent="Fundo"]

[node name="ConnectRed" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 45.0
margin_top = 122.0
margin_right = 423.0
margin_bottom = 138.0
rect_rotation = 44.3964
color = Color( 1, 0, 0, 1 )

[node name="ConnectYellow" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 45.0
margin_top = 206.0
margin_right = 340.0
margin_bottom = 222.0
rect_rotation = 22.8333
color = Color( 1, 0.984314, 0, 1 )

[node name="ConnectBlue" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 43.0
margin_top = 293.0
margin_right = 336.0
margin_bottom = 309.0
rect_rotation = -21.8211
color = Color( 0, 0.0862745, 1, 1 )

[node name="ConnectWhite" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 38.0
margin_top = 384.0
margin_right = 418.0
margin_bottom = 400.0
rect_rotation = -44.5892

[node name="Fios" type="Node" parent="."]

[node name="F_red" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 120.0
margin_right = 50.0
margin_bottom = 140.0
color = Color( 1, 0, 0, 1 )

[node name="Red" type="Button" parent="Fios/F_red"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_yellow" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 205.0
margin_right = 50.0
margin_bottom = 225.0
color = Color( 1, 0.984314, 0, 1 )

[node name="Yellow" type="Button" parent="Fios/F_yellow"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_blue" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 290.0
margin_right = 50.0
margin_bottom = 310.0
color = Color( 0, 0.0862745, 1, 1 )

[node name="Blue" type="Button" parent="Fios/F_blue"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_white" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 375.0
margin_right = 50.0
margin_bottom = 395.0

[node name="White" type="Button" parent="Fios/F_white"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="terminais" type="Node" parent="."]

[node name="term40" type="ColorRect" parent="terminais"]
margin_left = 305.0
margin_top = 115.0
margin_right = 340.0
margin_bottom = 145.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="40" type="Button" parent="terminais/term40"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "40"

[node name="term100" type="ColorRect" parent="terminais"]
margin_left = 305.0
margin_top = 180.0
margin_right = 340.0
margin_bottom = 210.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="60" type="Button" parent="terminais/term100"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "60"

[node name="term 200" type="ColorRect" parent="terminais"]
margin_left = 299.0
margin_top = 245.0
margin_right = 340.0
margin_bottom = 275.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="300" type="Button" parent="terminais/term 200"]
margin_left = 3.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 25.0
text = "300"

[node name="term60" type="ColorRect" parent="terminais"]
margin_left = 305.0
margin_top = 310.0
margin_right = 340.0
margin_bottom = 340.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="50" type="Button" parent="terminais/term60"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "50"

[node name="term101" type="ColorRect" parent="terminais"]
margin_left = 296.0
margin_top = 375.0
margin_right = 340.0
margin_bottom = 405.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="100" type="Button" parent="terminais/term101"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "100"

[connection signal="pressed" from="Fios/F_red/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Fios/F_yellow/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="Fios/F_blue/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Fios/F_white/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="terminais/term40/40" to="." method="_on_40_pressed"]
[connection signal="pressed" from="terminais/term100/60" to="." method="_on_60_pressed"]
[connection signal="pressed" from="terminais/term60/50" to="." method="_on_50_pressed"]
[connection signal="pressed" from="terminais/term101/100" to="." method="_on_100_pressed"]
